--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <meta name="description" content="Graduado em Sistemas de Informação, trabalha como Desenvolvedor Web focado principalmente em desenvolvimento front-end.">
     <meta itemprop="name" content="Sueldo Sales - Desenvolvedor Web">
     <meta itemprop="description" content="Graduado em Sistemas de Informação, trabalha como Desenvolvedor Web focado principalmente em desenvolvimento front-end.">
-    <meta itemprop="image" content="https://sueldosales.github.io/img/logog.png">
+    <meta itemprop="image" content="https://sueldosales.github.io/sobre/img/logog.png">
     <meta property="og:url" content="https://sueldosales.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Sueldo Sales - Desenvolvedor Web">
     <meta property="og:description" content="Graduado em Sistemas de Informação, trabalha como Desenvolvedor Web focado principalmente em desenvolvimento front-end.">
-    <meta property="og:image" content="https://sueldosales.github.io/img/logog.png">
+    <meta property="og:image" content="https://sueldosales.github.io/sobre/img/logog.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Sueldo Sales - Desenvolvedor Web">
     <meta name="twitter:description" content="Graduado em Sistemas de Informação, trabalha como Desenvolvedor Web focado principalmente em desenvolvimento front-end.">
-    <meta name="twitter:image" content="https://sueldosales.github.io/img/logog.png">
+    <meta name="twitter:image" content="https://sueldosales.github.io/sobre/img/logog.png">
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
@@ -508,7 +508,7 @@
     </footer>
 
     <!-- build:js scripts/main.min.js -->
-    <script src="scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
     <!-- endbuild -->
 
     <script>
