--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- Styles and Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-    <link rel="stylesheet" href="./sobre/styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif+Caption&display=swap" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
@@ -175,7 +175,7 @@
           <div class="columns is-centered">
             <div class="column">
               <figure class="image is-128x128" style="margin: 50px auto;">
-                <img class="is-rounded" src="./sobre/images/sueldosales.jpg">
+                <img class="is-rounded" src="./images/sueldosales.jpg">
               </figure>
               <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Desenvolvedor Web</h1>
               <h2 class="subtitle is-size-4-desktop">Sueldo Sales</h2>
@@ -257,7 +257,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="./sobre/images/drj.jpg" alt="Dra. Roberta Jales">
+                  <img src="./images/drj.jpg" alt="Dra. Roberta Jales">
                 </figure>
               </div>
               <div class="card-content">
@@ -281,7 +281,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="./sobre/images/lego.jpg" alt="Lego Education">
+                  <img src="./images/lego.jpg" alt="Lego Education">
                 </figure>
               </div>
               <div class="card-content">
@@ -305,7 +305,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="./sobre/images/pp.jpg" alt="Pica Pau Mudas">
+                  <img src="./images/pp.jpg" alt="Pica Pau Mudas">
                 </figure>
               </div>
               <div class="card-content">
@@ -329,7 +329,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="./sobre/images/cdv.jpg" alt="Codevolution">
+                  <img src="./images/cdv.jpg" alt="Codevolution">
                 </figure>
               </div>
               <div class="card-content">
@@ -356,7 +356,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="./sobre/images/cdm.jpg" alt="Criadora de Mundos">
+                  <img src="./images/cdm.jpg" alt="Criadora de Mundos">
                 </figure>
               </div>
               <div class="card-content">
@@ -381,7 +381,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="./sobre/images/ifrn.jpg" alt="Portal EaD IFRN">
+                  <img src="./images/ifrn.jpg" alt="Portal EaD IFRN">
                 </figure>
               </div>
               <div class="card-content">
@@ -406,7 +406,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="./sobre/images/mdl.jpg" alt="Moodle EaD IFRN">
+                  <img src="./images/mdl.jpg" alt="Moodle EaD IFRN">
                 </figure>
               </div>
               <div class="card-content">
@@ -431,7 +431,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="./sobre/images/sueldo.jpg" alt="Meu site">
+                  <img src="./images/sueldo.jpg" alt="Meu site">
                 </figure>
               </div>
               <div class="card-content">
@@ -508,7 +508,7 @@
     </footer>
 
     <!-- build:js scripts/main.min.js -->
-    <script src="./sobre/scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
     <!-- endbuild -->
 
     <script>
